Servicios en Angular

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
-<app-contador></app-contador><!--Llamado desde contador.component.ts-->
+<!--<app-contador></app-contador>--><!--Llamado desde contador.component.ts-->
 
 <!--<app-heroe></app-heroe>-->
 
-<app-ruta-directorio></app-ruta-directorio>
+<!--<app-ruta-directorio></app-ruta-directorio>-->
+<app-main-page></app-main-page>
